nicer daemon UI

--- a/fr1ckets/src/fr1ckets/templates/daemons.html
+++ b/fr1ckets/src/fr1ckets/templates/daemons.html
@@ -15,6 +15,10 @@
       </a>
     </header>
     <div>
+      notes;
+      <ul>
+        <li>toont enkel grid als'm plaats genoeg heeft</li>
+      </ul>
       todos;
       <ul>
         <li>breedte email input, autofocus knop</li>
