some shift docs linkage

--- a/fr1ckets/src/fr1ckets/templates/daemons.html
+++ b/fr1ckets/src/fr1ckets/templates/daemons.html
@@ -18,7 +18,7 @@
     </div>
     <header class="pageheader block block-narrow">
       <h1>Kies jouw vrijwilligersshift</h1>
-      <p>Fri3d Camp kan alleen bestaan als iedereen een steentje bijdraagt. Kies hier jouw shift.</p>
+      <p>Fri3d Camp kan alleen bestaan als iedereen een steentje bijdraagt. Kies hier jouw shift. Er zijn ook <a href="http://volunteers.fri3d.be/manuals/">handleidingen</a> voor elke shift.</p>
     </header>
     <div class="notice block-narrow">
       <p>Om je shifts te kiezen, vul hier het email-adres in waarmee je je tickets besteld hebt, en druk op de knop om je gegevens op te halen.</p>
