copy for volunteers

--- a/fr1ckets/src/fr1ckets/templates/daemons.html
+++ b/fr1ckets/src/fr1ckets/templates/daemons.html
@@ -28,7 +28,7 @@
       </form>
     </div>
     <div class="notice notice-error block-narrow" id="notify_email_error" hidden>
-      Woops, dit email adres heeft geen vrijwilligers.
+      Woops, dit email adres heeft geen vrijwilligers. Gebruik niet je eigen emailadres, maar het emailadres waarmee je ticket is gekocht.
     </div>
     <div class="notice notice-OK block-narrow" id="daemons_list_good" hidden>
         <h2>Gekozen shifts</h2>
