daemons overview & very secret ticket page

--- a/fr1ckets/src/fr1ckets/templates/index.html
+++ b/fr1ckets/src/fr1ckets/templates/index.html
@@ -4,6 +4,7 @@
 <li><a href="/admin/payments">Payments page</a>, voor ons, markeren van betalingen, removen van laattijdige betalingen.
 <li><a href="/admin/vouchers">Vouchers page</a>, voor ons, beheren van de vouchers.
 <li><a href="/admin/reservations">Reservations page</a>, voor ons, beheren van de reservaties.
+<li><a href="/admin/daemons_overview">Volunteering page</a>, voor ons, bekijken van de volunteering shifts.
 <li>Reports:<ul>
 	<li><a href="/reports/products">Products sold</a>.</li>
 </ul></li>
